--- a/service-portal/package.json
+++ b/service-portal/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
+    "next": "15.2.4",
+    "next-auth": "^5.0.0-beta",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4",
-    "next-auth": "^5.0.0-beta"
+    "sqlite3": "^5.1.7",
+    "use-debounce": "^10.0.5",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
