--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+# SQLite database file
+service-portal/lib/database/db.sqlite3
+service-portal/lib/database/prisma/dev-sqlite.db
