--- a/service-portal/package.json
+++ b/service-portal/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db-sqlite-migrate": "tsx ./lib/database/migrations-sqlite.ts"
+  },
+  "prisma": {
+    "schema": "./lib/database/prisma/schema.prisma"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.2.4",
@@ -28,7 +34,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
