--- a/service-portal/.env.example
+++ b/service-portal/.env.example
@@ -5,4 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev-sqlite.db"
-AUTH_SECRET="your-secret-key"
+
+# AUTH_SECRET="your-secret-key"
+# AUTH_URL="your-auth-url"
