--- a/service-portal/package.json
+++ b/service-portal/package.json
@@ -20,10 +20,13 @@
     "clsx": "^2.1.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta",
+    "next-logger": "^5.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sqlite3": "^5.1.7",
     "use-debounce": "^10.0.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.25.74"
   },
   "devDependencies": {
