--- a/service-portal/package.json
+++ b/service-portal/package.json
@@ -10,7 +10,8 @@
     "db-sqlite-migrate": "tsx ./lib/database/migrations-sqlite.ts"
   },
   "prisma": {
-    "schema": "./lib/database/prisma/schema.prisma"
+    "schema": "./lib/database/prisma/schema.prisma",
+    "seed": "tsx ./lib/database/prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -18,6 +19,7 @@
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta",
     "next-logger": "^5.0.1",
