--- a/service-portal/.env.example
+++ b/service-portal/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL="file:./dev-sqlite.db"
 
 # AUTH_SECRET="your-secret-key"
 # AUTH_URL="your-auth-url"
+
+# HF_TOKEN="huggingface.co-api-key"
