--- a/service-portal/package.json
+++ b/service-portal/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@heroicons/react": "^2.2.0",
+    "@huggingface/inference": "^4.5.1",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
