--- a/service-portal/.env.example
+++ b/service-portal/.env.example
@@ -8,5 +8,12 @@ DATABASE_URL="file:./dev-sqlite.db"
 
 # AUTH_SECRET="your-secret-key"
 # AUTH_URL="your-auth-url"
+# NEXTAUTH_URL="your-nextauth-url"
 
 # HF_TOKEN="huggingface.co-api-key"
+
+# NEXT_PUBLIC_SITE_URL=https://
+
+# APP_HOST=https://
+
+# NEXT_RUNTIME=
